<?xml version="1.0"?>
<package format="2">
  <name>mission_manager</name>
  <version>0.0.0</version>
  <description>The mission_manager package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>
  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>project11_transformations</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>path_follower</depend>
  <depend>path_planner</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
